--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Saishruthi Swaminathan"
-  avatar           : "profile.png"
+  avatar           : "profile.jpeg"
   bio              : "Data Scientist / Developer Advocate in IBM"
   location         : "California"
   employer         :
